6月20号提交版本

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
 
     <string name="fragment_365_title">365私人衣橱管理顾问</string>
     <string name="activity_private_manager_title">365私人衣橱顾问</string>
+
+    <string name="videonocontenttip">暂未开通，敬请期待</string>
 </resources>
